k8s/delete/delete-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-deployment
  namespace: p-spring-delete
  labels:
    app: delete-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-product
  template:
    metadata:
      labels:
        app: delete-product
    spec:
      nodeSelector:
        workload: update
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: delete-container
          image: alejandro411/p_spring_delete:latest
          ports:
            - containerPort: 8080
