k8s/delete/delete-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: delete-pod
  namespace: p-spring-delete
  labels:
    app: delete-product
spec:
  nodeSelector:
    workload: update
  imagePullSecrets:
    - name: dockerhub-secret
  containers:
    - name: delete-container
      image: alejandro411/p_spring_delete:latest
      ports:
        - containerPort: 8080
