k8s/delete/delete-service.yml
apiVersion: v1
kind: Service
metadata:
  name: delete-service
  namespace: p-spring-delete
  labels:
    app: delete-product
spec:
  selector:
    app: delete-product
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
  type: ClusterIP
